--- a/web-apps/svg-dropper/frontend/src/index.css
+++ b/web-apps/svg-dropper/frontend/src/index.css
@@ -37,6 +37,7 @@ body {
   flex-direction: column;
   place-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .main-content {
@@ -45,9 +46,10 @@ body {
   width: 100%;
   height: 100%;
   flex-grow: 1;
+  overflow: hidden;
 }
 
-.dropzone-container {
+.viewer-container {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -55,7 +57,8 @@ body {
   flex-grow: 1;
   place-items: center;
   place-content: center;
-  padding: 1rem;
+  gap: 1rem;
+  overflow: hidden;
 }
 
 .dropzone {
